--- a/Angular/hotelinventoryapp/package.json
+++ b/Angular/hotelinventoryapp/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "dev": "ng serve -o --poll=1000"
+    "dev": "ng serve -o"
   },
   "private": true,
   "dependencies": {
