--- a/Angular/hotelinventoryapp/angular.json
+++ b/Angular/hotelinventoryapp/angular.json
@@ -31,8 +31,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
